src/objects/Initiatives_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Initiative_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initiatives Objects</relationshipLabel>
        <relationshipName>Initiatives_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiatives_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiatives Object</label>
        <referenceTo>Initiatives_Object__c</referenceTo>
        <relationshipLabel>Initiatives Objects</relationshipLabel>
        <relationshipName>Initiative_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Initiatives Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>